syntax = "proto3";
option java_multiple_files = true;
option java_package =  "ch.usi.sa";
package CalculatorPackage;

message MyNumber {
  int32 number = 1;
}

message MyNumbers {
  //array
  repeated MyNumber numbers = 1;
}

message Nothing{}

service CalculatorService {
  //Unary
  rpc add(MyNumbers) returns (MyNumber);

  //Server Streaming
  rpc fibonacci(Nothing) returns (stream MyNumber);

  //Client Streaming
  rpc sumAll(stream MyNumber) returns (MyNumber);

  //Bidirectional Streaming
  rpc backAndForth(stream MyNumber) returns (stream MyNumber);

  //Server crash
  rpc fibonacciServerCrash(Nothing) returns (stream MyNumber);


  //Sync/Async
  rpc waitSomeTime(Nothing) returns (Nothing);
}
